fixed spacing arror with larger screens

--- a/css/style.css
+++ b/css/style.css
@@ -67,3 +67,7 @@ h1 {
     bottom:5px;
     right:145px;
 }
+
+#projects { 
+    max-width: 1200px;
+}
